[점심추천 API] - 리팩토링